--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" href="res/brandkit/favicon-logo.jpeg" type="image/x-icon" />
-    <title> SAGAR CRICKET TOURNAMENT </title>
+    <title> SAGAR CRICKET TOURNAMENT SAGAR </title>
     <script src="https://kit.fontawesome.com/78929323b4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" media="screen and (min-width: 768px)" href="styles/main.css" />
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="styles/main-m.css" />
