--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img src="res/backdrop/logo.png" alt="Event 1">
               </div>
               <div class="event-details">
-                <h3>SPL SEASON 3 : BIGGEST NIGHT TOURNAMENT</h3>
+                <h3>SPL SEASON 3 : BIGGEST NIGHT CRICKET TOURNAMENT</h3>
                 <p>Rules:</p>
                 <div class="event-details-desc">
                   <p>खिलाड़ियों का चयन नीलामी प्रक्रिया द्वारा किया जाएगा </p>
